# bazooka

./: .env  Cargo.toml  README.md  todo.txt
src/: cache.rs  cli.rs  desktop.rs  gui.rs  main.rs  service.rs  style.css
