[package]
name = "bazooka"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.32.3"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
gtk4 = { version = "0.9", package = "gtk4" }
gio = "0.17"
anyhow = "1.0.100"
meval = "0.2.0"
